Fix nav spacing

--- a/assets/css/styles.styl
+++ b/assets/css/styles.styl
@@ -163,6 +163,9 @@ button
 // MEDIA QUERIES
 // tablets
 @media screen and (min-width 768px)
+  nav
+    padding 1rem 2rem
+  
   main
     padding 0rem 2rem 4rem 2rem
 
@@ -175,6 +178,9 @@ button
 
 // laptops/desktops
 @media screen and (min-width 1200px)
+  nav
+    padding 1rem 5rem
+    
   main
     padding 0rem 5rem 4rem 5rem
 
